syntax = "proto3";

package social;

import "google/protobuf/timestamp.proto";

service SocialService {
    rpc Greet(GreetRequest) returns (GreetResponse) {}
    rpc PostFeed(PostFeedRequest) returns (stream PostFeedResponse) {}
}

message GreetRequest {
    string msg = 1;
}

message GreetResponse {
    string msg = 1;
}

message PostFeedRequest{
    int32 limit = 1;
}

message PostFeedResponse{
    repeated Post posts = 1;
}

message User {
    string user_id = 1;
    string nick_name = 2;
    string user_name = 3;
    string avatar = 4;
    string bio = 5;
    string email = 6;
    string web_site = 7;
    string birthday = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

message Content {
    string text = 1;
    repeated string images = 2;
    repeated string videos = 3;
}

message Post {
    string post_id = 1;
    User user = 2;
    Content content = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

// Post Comment
message Comment {
    string comment_id = 1;
    User user = 2;
    Content content = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}